--- a/unjson.cabal
+++ b/unjson.cabal
@@ -22,3 +22,8 @@ library
   build-depends:       base >=4.6 && <4.7
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+Test-Suite test
+    type:       exitcode-stdio-1.0
+    main-is:    test/Test.hs
+    build-depends: base
