--- a/unjson.cabal
+++ b/unjson.cabal
@@ -20,10 +20,16 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7
+  build-depends:       text
+  build-depends:       aeson
   -- hs-source-dirs:      
   default-language:    Haskell2010
+  extensions:          DeriveDataTypeable
 
 Test-Suite test
-    type:       exitcode-stdio-1.0
-    main-is:    test/Test.hs
-    build-depends: base
+  type:       exitcode-stdio-1.0
+  main-is:    test/Test.hs
+  build-depends: base
+  build-depends:       text
+  build-depends:       aeson
+  extensions:          DeriveDataTypeable
