--- a/unjson.cabal
+++ b/unjson.cabal
@@ -16,20 +16,21 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:     
+  exposed-modules:     Data.Unjson
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7
   build-depends:       text
   build-depends:       aeson
-  -- hs-source-dirs:      
+  hs-source-dirs:      src
   default-language:    Haskell2010
   extensions:          DeriveDataTypeable
 
 Test-Suite test
-  type:       exitcode-stdio-1.0
-  main-is:    test/Test.hs
-  build-depends: base
+  type:                exitcode-stdio-1.0
+  main-is:             test/Test.hs
+  build-depends:       base
   build-depends:       text
   build-depends:       aeson
+  build-depends:       unjson
   extensions:          DeriveDataTypeable
