--- a/unjson.cabal
+++ b/unjson.cabal
@@ -22,9 +22,11 @@ library
   build-depends:       base >=4.6 && <4.7
   build-depends:       text
   build-depends:       aeson
+  build-depends:       free
   hs-source-dirs:      src
   default-language:    Haskell2010
-  extensions:          DeriveDataTypeable
+  extensions:          DeriveDataTypeable,
+                       OverloadedStrings
 
 Test-Suite test
   type:                exitcode-stdio-1.0
@@ -33,4 +35,5 @@ Test-Suite test
   build-depends:       text
   build-depends:       aeson
   build-depends:       unjson
-  extensions:          DeriveDataTypeable
+  extensions:          DeriveDataTypeable,
+                       OverloadedStrings
