--- a/unjson.cabal
+++ b/unjson.cabal
@@ -23,10 +23,15 @@ library
   build-depends:       text
   build-depends:       aeson
   build-depends:       free
+  build-depends:       scientific
+  build-depends:       attoparsec
+  build-depends:       unordered-containers
   hs-source-dirs:      src
   default-language:    Haskell2010
   extensions:          DeriveDataTypeable,
-                       OverloadedStrings
+                       OverloadedStrings,
+                       NoMonomorphismRestriction,
+                       DeriveFunctor
 
 Test-Suite test
   type:                exitcode-stdio-1.0
@@ -35,5 +40,10 @@ Test-Suite test
   build-depends:       text
   build-depends:       aeson
   build-depends:       unjson
+  build-depends:       scientific
+  build-depends:       attoparsec
+  build-depends:       unordered-containers
   extensions:          DeriveDataTypeable,
-                       OverloadedStrings
+                       OverloadedStrings,
+                       NoMonomorphismRestriction,
+                       DeriveFunctor
