--- a/unjson.cabal
+++ b/unjson.cabal
@@ -13,7 +13,7 @@ maintainer:          gracjanpolak@gmail.com
 category:            Data
 build-type:          Simple
 -- extra-source-files:  
-cabal-version:       >=1.10
+cabal-version:       >=1.18
 
 library
   exposed-modules:     Data.Unjson
@@ -29,12 +29,14 @@ library
   build-depends:       vector
   hs-source-dirs:      src
   default-language:    Haskell2010
-  extensions:          DeriveDataTypeable,
+  default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
                        NoMonomorphismRestriction,
                        DeriveFunctor,
                        RankNTypes,
                        FlexibleContexts,
+                       FlexibleInstances,
+                       TypeFamilies,
                        GADTs
 
 Test-Suite test
@@ -49,10 +51,13 @@ Test-Suite test
   build-depends:       attoparsec
   build-depends:       unordered-containers
   build-depends:       vector
-  extensions:          DeriveDataTypeable,
+  default-language:    Haskell2010
+  default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
                        NoMonomorphismRestriction,
                        DeriveFunctor,
                        RankNTypes,
                        FlexibleContexts,
+                       FlexibleInstances,
+                       TypeFamilies,
                        GADTs
