--- a/unjson.cabal
+++ b/unjson.cabal
@@ -37,12 +37,16 @@ library
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeFamilies,
+                       OverloadedStrings,
+                       ScopedTypeVariables,
                        GADTs
 
 Test-Suite test
   type:                exitcode-stdio-1.0
-  main-is:             test/Test.hs
+  main-is:             Test.hs
+  hs-source-dirs:      test
   build-depends:       base
+  build-depends:       Cabal
   build-depends:       text
   build-depends:       aeson
   build-depends:       unjson
@@ -51,6 +55,7 @@ Test-Suite test
   build-depends:       attoparsec
   build-depends:       unordered-containers
   build-depends:       vector
+  build-depends:       HUnit
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
@@ -60,4 +65,6 @@ Test-Suite test
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeFamilies,
+                       OverloadedStrings,
+                       ScopedTypeVariables,
                        GADTs
