--- a/unjson.cabal
+++ b/unjson.cabal
@@ -40,6 +40,7 @@ library
                        OverloadedStrings,
                        ScopedTypeVariables,
                        OverlappingInstances,
+                       BangPatterns,
                        GADTs
 
 Test-Suite test
@@ -69,4 +70,5 @@ Test-Suite test
                        OverloadedStrings,
                        ScopedTypeVariables,
                        OverlappingInstances,
+                       BangPatterns,
                        GADTs
