--- a/unjson.cabal
+++ b/unjson.cabal
@@ -27,6 +27,7 @@ library
   build-depends:       attoparsec
   build-depends:       unordered-containers
   build-depends:       vector
+  build-depends:       pretty
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
@@ -58,6 +59,8 @@ Test-Suite test
   build-depends:       unordered-containers
   build-depends:       vector
   build-depends:       HUnit
+  build-depends:       bytestring
+  build-depends:       pretty
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
