--- a/unjson.cabal
+++ b/unjson.cabal
@@ -28,6 +28,7 @@ library
   build-depends:       unordered-containers
   build-depends:       vector
   build-depends:       pretty
+  build-depends:       containers
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
@@ -61,6 +62,7 @@ Test-Suite test
   build-depends:       HUnit
   build-depends:       bytestring
   build-depends:       pretty
+  build-depends:       containers
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
