--- a/unjson.cabal
+++ b/unjson.cabal
@@ -3,13 +3,13 @@
 
 name:                unjson
 version:             0.1.0.0
--- synopsis:            
+synopsis:            JSON bidirectional parsing and generation with automatic documentation support.
 -- description:         
 license:             BSD3
 license-file:        LICENSE
 author:              Gracjan Polak
 maintainer:          gracjanpolak@gmail.com
--- copyright:           
+copyright:           Gracjan Polak
 category:            Data
 build-type:          Simple
 -- extra-source-files:  
@@ -19,7 +19,7 @@ library
   exposed-modules:     Data.Unjson
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base < 10
   build-depends:       text
   build-depends:       aeson
   build-depends:       free
