Make Path into a newtype

--- a/unjson.cabal
+++ b/unjson.cabal
@@ -35,6 +35,7 @@ library
                        OverloadedStrings,
                        NoMonomorphismRestriction,
                        DeriveFunctor,
+                       GeneralizedNewtypeDeriving,
                        RankNTypes,
                        FlexibleContexts,
                        FlexibleInstances,
@@ -67,6 +68,7 @@ Test-Suite test
   default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
                        NoMonomorphismRestriction,
+                       GeneralizedNewtypeDeriving,
                        DeriveFunctor,
                        RankNTypes,
                        FlexibleContexts,
