--- a/unjson.cabal
+++ b/unjson.cabal
@@ -33,8 +33,8 @@ library
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
-                       NoMonomorphismRestriction,
                        DeriveFunctor,
+                       ExtendedDefaultRules,
                        GeneralizedNewtypeDeriving,
                        RankNTypes,
                        FlexibleContexts,
@@ -67,9 +67,9 @@ Test-Suite test
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
-                       NoMonomorphismRestriction,
                        GeneralizedNewtypeDeriving,
                        DeriveFunctor,
+                       ExtendedDefaultRules,
                        RankNTypes,
                        FlexibleContexts,
                        FlexibleInstances,
