--- a/unjson.cabal
+++ b/unjson.cabal
@@ -29,6 +29,9 @@ library
   build-depends:       vector
   build-depends:       pretty
   build-depends:       containers
+  build-depends:       hashable
+  build-depends:       primitive
+  build-depends:       time
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
@@ -41,6 +44,7 @@ library
                        FlexibleInstances,
                        TypeFamilies,
                        OverloadedStrings,
+                       UndecidableInstances,
                        ScopedTypeVariables,
                        OverlappingInstances,
                        BangPatterns,
@@ -63,7 +67,10 @@ Test-Suite test
   build-depends:       HUnit
   build-depends:       bytestring
   build-depends:       pretty
+  build-depends:       primitive
   build-depends:       containers
+  build-depends:       time
+  build-depends:       hashable
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
@@ -71,6 +78,7 @@ Test-Suite test
                        DeriveFunctor,
                        ExtendedDefaultRules,
                        RankNTypes,
+                       UndecidableInstances,
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeFamilies,
