--- a/unjson.cabal
+++ b/unjson.cabal
@@ -32,6 +32,7 @@ library
   build-depends:       hashable
   build-depends:       primitive
   build-depends:       time
+  build-depends:       invariant
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
@@ -71,6 +72,7 @@ Test-Suite test
   build-depends:       containers
   build-depends:       time
   build-depends:       hashable
+  build-depends:       invariant
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
                        OverloadedStrings,
