--- a/unjson.cabal
+++ b/unjson.cabal
@@ -14,6 +14,7 @@ category:            Data
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.18
+tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
 
 library
   exposed-modules:     Data.Unjson
