--- a/unjson.cabal
+++ b/unjson.cabal
@@ -22,7 +22,7 @@ library
   -- other-extensions:
   build-depends:       base < 10, text, aeson < 1.0, free, scientific,
                        attoparsec, unordered-containers, vector,
-                       pretty, bytestring, containers, hashable,
+                       pretty, bytestring >= 0.10, containers, hashable,
                        primitive, time, invariant
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -47,8 +47,8 @@ Test-Suite test
   main-is:             Test.hs
   hs-source-dirs:      src, test
   build-depends:       base, text, aeson < 1.0, free, scientific, attoparsec,
-                       unordered-containers, vector, HUnit, bytestring,
-                       pretty, bytestring, primitive, containers, time,
+                       unordered-containers, vector, HUnit, bytestring >= 0.10,
+                       pretty, primitive, containers, time,
                        hashable, invariant
   default-language:    Haskell2010
   default-extensions:  DeriveDataTypeable,
