--- a/unjson.cabal
+++ b/unjson.cabal
@@ -20,9 +20,10 @@ library
   exposed-modules:     Data.Unjson
   -- other-modules:
   -- other-extensions:
-  build-depends:       base < 10, text, aeson < 1.0, free, scientific,
-                       attoparsec, unordered-containers, vector,
-                       pretty, bytestring >= 0.10, containers, hashable,
+  build-depends:       base >= 4.5 && < 5, text, aeson < 1.0,
+                       free, scientific, attoparsec,
+                       unordered-containers, vector, pretty,
+                       bytestring >= 0.10, containers, hashable,
                        primitive, time, invariant
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -46,7 +47,8 @@ Test-Suite test
   type:                exitcode-stdio-1.0
   main-is:             Test.hs
   hs-source-dirs:      src, test
-  build-depends:       base, text, aeson < 1.0, free, scientific, attoparsec,
+  build-depends:       base >= 4.5 && < 5, text, aeson < 1.0,
+                       free, scientific, attoparsec,
                        unordered-containers, vector, HUnit, bytestring >= 0.10,
                        pretty, primitive, containers, time,
                        hashable, invariant
