--- a/unjson.cabal
+++ b/unjson.cabal
@@ -20,7 +20,7 @@ library
   exposed-modules:     Data.Unjson
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >= 4.5 && < 5, text, aeson < 1.0,
+  build-depends:       base >= 4.5 && < 5, text, aeson < 1.0 && >= 0.10,
                        free, scientific, attoparsec,
                        unordered-containers, vector, pretty,
                        bytestring >= 0.10, containers, hashable,
@@ -47,7 +47,7 @@ Test-Suite test
   type:                exitcode-stdio-1.0
   main-is:             Test.hs
   hs-source-dirs:      src, test
-  build-depends:       base >= 4.5 && < 5, text, aeson < 1.0,
+  build-depends:       base >= 4.5 && < 5, text, aeson < 1.0 && >= 0.10,
                        free, scientific, attoparsec,
                        unordered-containers, vector, HUnit, bytestring >= 0.10,
                        pretty, primitive, containers, time,
