--- a/unjson.cabal
+++ b/unjson.cabal
@@ -16,6 +16,15 @@ build-type:          Simple
 cabal-version:       >=1.18
 tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
 
+source-repository head
+  type:     git
+  location: https://github.com/scrive/unjson
+
+source-repository this
+  type:     git
+  location: https://github.com/scrive/unjson
+  tag:      0.14
+
 library
   exposed-modules:     Data.Unjson
   -- other-modules:
