--- a/unjson.cabal
+++ b/unjson.cabal
@@ -1,5 +1,5 @@
 name:                unjson
-version:             0.14.1.1
+version:             0.14.1.2
 synopsis:            Bidirectional JSON parsing and generation.
 description:         Bidirectional JSON parsing and generation
                      with automatic documentation support.
@@ -25,57 +25,55 @@ source-repository head
 source-repository this
   type:     git
   location: https://github.com/scrive/unjson.git
-  tag:      0.14.1.1
+  tag:      0.14.1.2
 
 library
   exposed-modules:     Data.Unjson
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >= 4.5 && < 5, text, aeson >= 0.7 && < 1.1,
+  build-depends:       base >= 4.5 && < 5, text, aeson >= 1.0 && < 1.2,
                        free, scientific, attoparsec,
                        unordered-containers, vector, pretty,
                        bytestring >= 0.10, containers, hashable,
                        primitive, time, invariant
   hs-source-dirs:      src
   default-language:    Haskell2010
-  default-extensions:  DeriveDataTypeable,
-                       OverloadedStrings,
+  default-extensions:  BangPatterns,
+                       DeriveDataTypeable,
                        DeriveFunctor,
                        ExtendedDefaultRules,
-                       GeneralizedNewtypeDeriving,
-                       RankNTypes,
                        FlexibleContexts,
                        FlexibleInstances,
-                       TypeFamilies,
+                       GADTs,
+                       GeneralizedNewtypeDeriving,
                        OverloadedStrings,
-                       UndecidableInstances,
+                       RankNTypes,
                        ScopedTypeVariables,
-                       OverlappingInstances,
-                       BangPatterns,
-                       GADTs
+                       TypeFamilies,
+                       UndecidableInstances
 
 Test-Suite test
   type:                exitcode-stdio-1.0
   main-is:             Test.hs
   hs-source-dirs:      src, test
-  build-depends:       base >= 4.5 && < 5, text, aeson >= 1.0 && < 1.1,
+  build-depends:       base >= 4.5 && < 5, text, aeson >= 1.0 && < 1.2,
                        free, scientific, attoparsec,
                        unordered-containers, vector, HUnit, bytestring >= 0.10,
                        pretty, primitive, containers, time,
                        hashable, invariant
   default-language:    Haskell2010
-  default-extensions:  DeriveDataTypeable,
-                       OverloadedStrings,
-                       GeneralizedNewtypeDeriving,
+  default-extensions:  BangPatterns,
+                       DeriveDataTypeable,
                        DeriveFunctor,
                        ExtendedDefaultRules,
-                       RankNTypes,
-                       UndecidableInstances,
                        FlexibleContexts,
                        FlexibleInstances,
-                       TypeFamilies,
-                       OverloadedStrings,
-                       ScopedTypeVariables,
+                       GADTs,
+                       GeneralizedNewtypeDeriving,
                        OverlappingInstances,
-                       BangPatterns,
-                       GADTs
+                       OverloadedStrings,
+                       OverloadedStrings,
+                       RankNTypes,
+                       ScopedTypeVariables,
+                       TypeFamilies,
+                       UndecidableInstances
