--- a/unjson.cabal
+++ b/unjson.cabal
@@ -25,7 +25,7 @@ source-repository head
 source-repository this
   type:     git
   location: https://github.com/scrive/unjson.git
-  tag:      0.14.1.2
+  tag:      0.14.1.3
 
 library
   exposed-modules:     Data.Unjson
@@ -51,6 +51,8 @@ library
                        ScopedTypeVariables,
                        TypeFamilies,
                        UndecidableInstances
+  if impl(ghc < 7.10)
+      default-extensions: OverloadedInstances
 
 Test-Suite test
   type:                exitcode-stdio-1.0
@@ -75,3 +77,5 @@ Test-Suite test
                        ScopedTypeVariables,
                        TypeFamilies,
                        UndecidableInstances
+  if impl(ghc < 7.10)
+      default-extensions: OverloadedInstances
