--- a/unjson.cabal
+++ b/unjson.cabal
@@ -13,7 +13,7 @@ maintainer:          Gracjan Polak <gracjanpolak@gmail.com>,
 copyright:           Scrive AB
 category:            Data
 build-type:          Simple
-extra-source-files:  README.md
+extra-source-files:  README.md, CHANGELOG.md
 cabal-version:       >=1.18
 tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2,
                      GHC == 8.2.2
