--- a/unjson.cabal
+++ b/unjson.cabal
@@ -37,6 +37,7 @@ library
                        bytestring >= 0.10, containers, hashable,
                        primitive, time, invariant
   hs-source-dirs:      src
+  ghc-options:         -Wall
   default-language:    Haskell2010
   default-extensions:  BangPatterns,
                        DeriveDataTypeable,
@@ -61,6 +62,7 @@ Test-Suite test
                        unordered-containers, vector, HUnit, bytestring >= 0.10,
                        pretty, primitive, containers, time,
                        hashable, invariant
+  ghc-options:         -Wall
   default-language:    Haskell2010
   default-extensions:  BangPatterns,
                        DeriveDataTypeable,
