--- a/unjson.cabal
+++ b/unjson.cabal
@@ -1,5 +1,5 @@
 name:                unjson
-version:             0.15.1.1
+version:             0.15.2.0
 synopsis:            Bidirectional JSON parsing and generation.
 description:         Bidirectional JSON parsing and generation
                      with automatic documentation support.
@@ -25,17 +25,28 @@ source-repository head
 source-repository this
   type:     git
   location: https://github.com/scrive/unjson.git
-  tag:      0.15.1.1
+  tag:      0.15.2.0
 
 library
   exposed-modules:     Data.Unjson
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >= 4.7 && < 5, text, aeson >= 1.0 && < 1.4,
-                       free, scientific, attoparsec,
-                       unordered-containers, vector, pretty,
-                       bytestring >= 0.10, containers, hashable,
-                       primitive, time, invariant
+  build-depends:       base >= 4.7 && < 5,
+                       aeson >= 1.0 && < 1.4,
+                       attoparsec,
+                       bytestring >= 0.10,
+                       containers,
+                       free,
+                       hashable,
+                       invariant,
+                       pretty,
+                       primitive,
+                       scientific,
+                       semigroups >= 0.16,
+                       text,
+                       time,
+                       unordered-containers,
+                       vector
   hs-source-dirs:      src
   ghc-options:         -Wall
   default-language:    Haskell2010
