--- a/unjson.cabal
+++ b/unjson.cabal
@@ -1,3 +1,4 @@
+cabal-version:       1.18
 name:                unjson
 version:             0.15.2.1
 synopsis:            Bidirectional JSON parsing and generation.
@@ -14,7 +15,6 @@ copyright:           Scrive AB
 category:            Data
 build-type:          Simple
 extra-source-files:  README.md, CHANGELOG.md
-cabal-version:       >=1.18
 tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2,
                      GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2
 
