--- a/unjson.cabal
+++ b/unjson.cabal
@@ -31,8 +31,8 @@ library
   exposed-modules:     Data.Unjson
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >= 4.7 && < 4.13,
-                       aeson >= 1.0 && < 1.5,
+  build-depends:       base >= 4.7 ,
+                       aeson >= 1.0 ,
                        attoparsec,
                        bytestring >= 0.10,
                        containers,
