--- a/unjson.cabal
+++ b/unjson.cabal
@@ -16,7 +16,8 @@ category:            Data
 build-type:          Simple
 extra-source-files:  README.md, CHANGELOG.md
 tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2,
-                     GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2
+                     GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2,
+                     GHC == 8.8.3, GHC == 8.10.1
 
 source-repository head
   type:     git
