--- a/unjson.cabal
+++ b/unjson.cabal
@@ -1,6 +1,6 @@
 cabal-version:       1.18
 name:                unjson
-version:             0.15.3
+version:             0.15.4
 synopsis:            Bidirectional JSON parsing and generation.
 description:         Bidirectional JSON parsing and generation
                      with automatic documentation support.
@@ -15,7 +15,7 @@ copyright:           Scrive AB
 category:            Data
 build-type:          Simple
 extra-source-files:  README.md, CHANGELOG.md
-tested-with:         GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1
+tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.1
 
 source-repository head
   type:     git
@@ -28,10 +28,10 @@ source-repository this
 
 library
   exposed-modules:     Data.Unjson
-  -- other-modules:
+                       Data.Unjson.Internal.Aeson.Compat
   -- other-extensions:
-  build-depends:       base >= 4.9 && < 5,
-                       aeson >= 1.0 && < 1.6,
+  build-depends:       base >= 4.13 && < 5,
+                       aeson >= 1.0,
                        attoparsec,
                        bytestring >= 0.10,
                        containers,
